--- a/proj-1/style.css
+++ b/proj-1/style.css
@@ -45,7 +45,18 @@ body {
     margin-bottom: 5px;
   }
 
-  footer {
+main{
+    position: relative;
+  }
+
+  .city{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%; 
+  }
+
+/*   footer {
     position: absolute;
     bottom: 0;
     left: 0;
@@ -83,5 +94,5 @@ body {
     height: 95vh; 
     background-image: url('images/IMG_9335.png'); 
 } 
-
+ */
 
