--- a/proj-1/style.css
+++ b/proj-1/style.css
@@ -31,7 +31,9 @@ body {
   #tooltip { 
     position: absolute;
     background-color: rgba(255, 255, 255, 0.9);
+    color: black;
     padding: 10px;
+    text-align: left;
     border: 1px solid #ccc;
     border-radius: 5px;
     font-size: 14px;
@@ -58,44 +60,3 @@ main{
     left: 0;
     width: 100%; 
   }
-
-/*   footer {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    padding: 10px;
-    text-align: center;
-    height: 100px; 
-
-  }
-
-.heading {
-  font-family: 'BebasNeue-Regular', sans-serif;
-  font-size: 30px;
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  padding-bottom: 80px;
-  text-align: center;
-  color: white;
-}
-
-.paragraph {
-  font-family: 'Abel-Regular', sans-serif;
-  font-size: 15px;
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  text-align: center;
-  color: white;
-}
-
-  #image-placeholder {
-    height: 95vh; 
-    background-image: url('images/IMG_9335.png'); 
-} 
- */
-
